--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "algolia",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vnsteven.github.io/hacker-news-react/"
+  "homepage": "https://vnsteven.github.io/hacker-news-react/",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
