--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://vnsteven.github.io/hacker-news-react/",
   "dependencies": {
     "axios": "^0.19.0",
+    "font-awesome": "^4.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
