--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "algolia",
+  "name": "hacker-news",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://vnsteven.github.io/hacker-news-react/",
@@ -22,7 +22,11 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
